# Caches

./: CMakeLists.txt  README.md
belady/: CMakeLists.txt  cache_belady.cpp  cache_belady.hpp
ideal/: cache.cpp  cache.hpp
include/: cache_arc.hpp  cache_belady.hpp  cache_lfu.hpp
lfu/: ANSI_colors.hpp  CMakeLists.txt  cache.cpp  cache.hpp  cache_lfu.cpp  cache_lfu.hpp
src/: CMakeLists.txt  cache_arc.cpp  cache_lfu.cpp
tests/: CMakeLists.txt  cache_belady.cpp  cache_lfu.cpp  generate.py  run_tests.py  run_tests.sh
tests/tests_dat/: answer.out  test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
